# php-toolchain

./: .gitignore  LICENSE  Makefile  PHP_Toolchain.md  README.md
PROMPTS/: 00_MASTER_CONTEXT.md  01_core_models.md  02_core_loader.md  03_core_scanner.md  04_analyzer_vendor.md  05_analyzer_duplicate.md  06_analyzer_backup.md  07_analyzer_complexity.md  08_analyzer_structure.md  09_planner_action.md  10_planner_conflict.md  11_executor_safe.md  12_executor_fileops.md  13_executor_gitignore.md  14_reporter_cli.md  15_reporter_html.md  16_main_integration.md  Makefile  README.md  build.sh
PROMPTS/tests/: test_build_sh.bats
claude/: .gitignore  Makefile  README.md  main.py
claude/analyzers/: backup_analyzer.py  (+4 more)
codex/: Makefile  README.md  main.py  pyproject.toml
gemini/: main.py  pyproject.toml
gemini/analyzers/: backup_analyzer.py  complexity_analyzer.py  duplicate_analyzer.py  structure_analyzer.py  vendor_analyzer.py
gemini/core/: loader.py  models.py  scanner.py
gemini/executors/: file_ops.py  gitignore_gen.py  safe_executor.py
gemini/planners/: action_planner.py  conflict_resolver.py
gemini/reporters/: cli_reporter.py  html_reporter.py
gemini/tests/: test_action_planner.py  test_backup_analyzer.py  test_cli_reporter.py  test_complexity_analyzer.py  test_conflict_resolver.py  test_duplicate_analyzer.py  test_file_ops.py  test_gitignore_gen.py  test_html_reporter.py  test_integration.py  test_loader.py  test_models.py  test_safe_executor.py  test_scanner.py  test_structure_analyzer.py  test_vendor_analyzer.py
gemini/tests/fixtures/: mini_report.json
(+67 files in other folders)
