[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "php-cleanup-toolkit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ijson>=3.2",
    "rich>=13.0",
    "click>=8.1",
]

[project.scripts]
php-cleanup = "main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
